# Meow-Pilot

./: .gitignore  README.en.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  macos-direct-distribution.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  i18n.ts  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  README.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/native/calendar-helper/: pet-calendar-helper.swift
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ErrorBoundary.css  ErrorBoundary.tsx
apps/desktop/src/config/: starterPrompts.ts
apps/desktop/src/hooks/: usePetAgent.ts  usePetPresence.ts  usePetSessionState.ts  useVirtualWindow.ts
apps/desktop/src/lib/: usePersistentState.ts
apps/desktop/src/services/: PetAgentClient.test.ts  PetAgentClient.ts
docs/: agent-orchestration.md  architecture.md  delivery-checklist.md  direct-macos-distribution.md  media-provider-api-test.md  petdex-assets.md  to_fix.md
docs/adr/: 0001-modular-desktop-shell.md
docs/archive/: architecture-draft-2026-05-21.md  to_fix.md
docs/reviews/: meow_pilot_architecture_review.md  meow_pilot_architecture_todo.md  social_system_priority.md
scripts/: build-calendar-helper.mjs  prepare-node-runtime.mjs  verify-main-data-policy.ts
scripts/migrate/: scan.ts
skills/bundled/media/music-companion/: SKILL.md
(+25 files in other folders)
