[package]
name = "pet-desktop"
version = "0.1.0"
description = "Desktop pet agent shell"
authors = ["Pet Agent"]
edition = "2021"

[lib]
name = "pet_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
